fix(post): don't vertically overflow

--- a/src/components/Post.module.scss
+++ b/src/components/Post.module.scss
@@ -15,7 +15,6 @@
   position: relative;
   z-index: 10;
   display: block;
-  width: 100%;
   margin-bottom: home.$padding;
   opacity: 1;
 
@@ -24,7 +23,6 @@
   }
 
   @include screen.md {
-    margin-right: home.$padding - 1rem;
     margin-bottom: 0;
   }
 }
@@ -33,7 +31,6 @@
   width: auto;
   max-width: 100%;
   height: auto;
-  max-height: 70vh;
   border-radius: 8px;
   box-shadow: 0 0 38px 2px rgba(0, 0, 0, 46%);
   transition: width 0.15s ease, height 0.15s ease;
@@ -41,11 +38,14 @@
 
 .photo {
   display: block;
-  width: 100%;
+  width: auto;
+  max-width: 100%;
   height: 100%;
+  max-height: 70vh;
   border-radius: inherit;
   filter: blur(0);
   opacity: 1;
+  transition: width 0.15s ease, height 0.15s ease;
   transition: filter 1s ease, opacity 1s ease;
 
   &.phase {
@@ -57,6 +57,7 @@
 .top,
 .under {
   display: flex;
+  height: 2.5rem;
   font-family: 'Bad Script', cursive;
   font-size: 1.25rem;
 
